@@ -1,3 +1,7 @@
+2010-12-09  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.base/interp.exp: Add regression test.
+
 2010-11-18  Phil Muldoon  <pmuldoon@redhat.com>
             Jan Kratochvil  <jan.kratochvil@redhat.com>
 
